refactor auth/user domains and add sql scripts
