# app/internal/app/factories/handler_factory/factory.go
@@ -5,22 +5,22 @@ import (
 	"google.golang.org/grpc"
 
 	"getme-backend/internal/app"
+	"getme-backend/internal/app/auth/delivery/http/handlers/login/simple_auth_handler"
+	"getme-backend/internal/app/auth/delivery/http/handlers/login/telegram_auth_handler"
+	logout_handler "getme-backend/internal/app/auth/delivery/http/handlers/logout"
+	"getme-backend/internal/app/auth/delivery/http/handlers/register/simple_register_handler"
+	"getme-backend/internal/app/auth/delivery/http/handlers/register/telegram_register_handler"
 	"getme-backend/internal/app/token/delivery/http/handlers/token_handler"
-	"getme-backend/internal/app/user/delivery/http/handlers/user_auth/simple"
-	user_auth_handler "getme-backend/internal/app/user/delivery/http/handlers/user_auth/telegram"
-	user_auth_check_handler "getme-backend/internal/app/user/delivery/http/handlers/user_auth_check/telegram"
-	"getme-backend/internal/app/user/delivery/http/handlers/user_logout"
-	"getme-backend/internal/app/user/delivery/http/handlers/user_register"
 	"getme-backend/internal/microservices/auth/delivery/grpc/client"
 )
 
 const (
-	AUTH_CHECK = iota
-	AUTH
+	AUTH_TG = iota
+	AUTH_SIMPLE
 	AUTH_TOKEN
-	LOGIN
+	REGISTER_TG
+	REGISTER_SIMPLE
 	LOGOUT
-	REGISTER
 )
 
 type HandlerFactory struct {
@@ -41,15 +41,16 @@ func NewFactory(logger *logrus.Logger, sessionClientConn *grpc.ClientConn, ucFac
 func (f *HandlerFactory) initAllHandlers() map[int]app.Handler {
 	ucUsecase := f.usecaseFactory.GetUserUsecase()
 	tokenUsecase := f.usecaseFactory.GetTokenUsecase()
+	authUsecase := f.usecaseFactory.GetAuthUsecase()
 
 	sClient := client.NewSessionClient(f.sessionClientConn)
 	return map[int]app.Handler{
-		AUTH_CHECK: user_auth_check_handler.NewUserAuthCheckHandler(f.logger, ucUsecase, sClient),
-		AUTH:       user_auth_handler.NewUserAuthHandler(f.logger, ucUsecase, sClient, tokenUsecase),
-		AUTH_TOKEN: token_handler.NewTokenHandler(f.logger, tokenUsecase, sClient),
-		LOGOUT:     user_logout.NewLogoutHandler(f.logger, sClient),
-		LOGIN:      user_simple_auth.NewLoginHandler(f.logger, sClient, ucUsecase),
-		REGISTER:   user_register.NewRegisterHandler(f.logger, sClient, ucUsecase),
+		LOGOUT:          logout_handler.NewLogoutHandler(f.logger, sClient),
+		AUTH_TG:         telegram_auth_handler.NewAuthHandler(f.logger, sClient, tokenUsecase),
+		REGISTER_TG:     telegram_register_handler.NewRegisterHandler(f.logger, sClient, authUsecase, ucUsecase),
+		AUTH_SIMPLE:     simple_auth_handler.NewAuthHandler(f.logger, sClient, authUsecase),
+		REGISTER_SIMPLE: simple_register_handler.NewRegisterHandler(f.logger, sClient, ucUsecase, authUsecase),
+		AUTH_TOKEN:      token_handler.NewTokenHandler(f.logger, tokenUsecase, sClient),
 	}
 }
 
@@ -60,22 +61,13 @@ func (f *HandlerFactory) GetHandleUrls() *map[string]app.Handler {
 
 	hs := f.initAllHandlers()
 	f.urlHandler = &map[string]app.Handler{
-		//=============user==============//
-		"/auth/telegram/callback": hs[AUTH],
-
-		//"/login":         hs[AUTH],
-		//"/login/confirm": hs[AUTH],
-		//
-		//"/register/telegram": hs[AUTH],
-		//"/register/confirm":  hs[AUTH],
-
-		"/auth/token":           hs[AUTH_TOKEN],
-		"/auth/telegram/check":  hs[AUTH_CHECK],
-		"/logout":               hs[LOGOUT],
-		"/auth/simple/login":    hs[LOGIN],
-		"/auth/simple/register": hs[REGISTER],
-
-		//"/user/<nickname>/create":  hs[USER_CREATE],
+		//=============auth==============//
+		"/logout":                 hs[LOGOUT],
+		"/auth/telegram/login":    hs[AUTH_TG],
+		"/auth/simple/login":      hs[AUTH_SIMPLE],
+		"/auth/telegram/register": hs[REGISTER_TG],
+		"/auth/simple/register":   hs[REGISTER_SIMPLE],
+		"/auth/token":             hs[AUTH_TOKEN],
 	}
 	return f.urlHandler
 }
